# amazon-fashion-search-engine

./: .dockerignore  .env.example  .env.template  .gitattributes  .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  debug_pipeline.py  docker-compose.yml  pyproject.toml  sample_test_data.jsonl  setup.py  simple_debug.py  test-frontend.sh  test_fix.py
backend/data-pipeline/: main.py
backend/data-pipeline/src/: __init__.py  main.py  (+4 more)
backend/search-api/: main.py
data/: sample_500_products.jsonl  test_sample_500.jsonl  test_sample_500_analysis.json
data/raw/: meta_Amazon_Fashion.jsonl
data/sample/: sample_products.json  sample_products.jsonl
docker/: docker-compose.dev.yml  docker-compose.yml
docker/data-pipeline/: Dockerfile
docker/search-api/: Dockerfile
docs/: API_TECHNICAL_SPECIFICATION.md  ARCHITECTURE.md  FRONTEND_DEVELOPMENT_PROMPT.md  Take_home_requirements.md  VERCEL_TECHNICAL_SPECIFICATION.md  approach_and_next_steps.md  architecture_diagrams.md  cost_analysis.md  design_decisions.md  embedding_model_analysis.md  exploration_roadmap.md  final_exploration.md
frontend/: .gitignore  Dockerfile  FRONTEND_SUMMARY.md  README.md  next.config.ts  package-lock.json  package.json  start-frontend.sh
frontend/app/: globals.css  page.tsx
frontend/components/: ProductCard.tsx  SearchBar.tsx  SearchResults.tsx
frontend/public/: index.html
frontend/services/: api.ts
frontend/src/: App.css  App.js  index.css
infrastructure/docker/: data-pipeline.Dockerfile  docker-compose.dev.yml  docker-compose.yml  search-api.Dockerfile
notebooks/: data_exploration.ipynb
prototype/: Dockerfile  README.md  build_index.py  docker-compose.yml  generate_sample.py  requirements.txt  test_search.py
scripts/: generate_stratified_sample.py  setup.py  setup.sh  simple_test.py  test_system.py  validate_setup.py
services/: __init__.py
services/data-pipeline/: Dockerfile  __init__.py  main.py
services/search-api/: Dockerfile  __init__.py  main.py
shared/: __init__.py
shared/models/: __init__.py  base.py  config.py  product.py  search.py
shared/utils/: __init__.py  logging.py  text_processing.py
(+48 files in other folders)
